# mrss

./: atom.c  meson.build  mrss.1  mrss.c  mrss.h  rdf.c  rss.c  version.h.in  xml_utils.c  xml_utils.h
test/: atom-1.xml  atom.xml  check  expected-0  expected-1  expected-2  expected-3  rdf-1.xml  rdf.xml  rss-1.xml  rss-2.xml  rss.xml
